objects/Partner_Benefits__c.object
<CustomObject><fields>
        <fullName>Discount__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = 'Training_Discount', 30,IF( $RecordType.DeveloperName = 'License_Discount',25,0))</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Event_Name__c</fullName>
        <description>to capture the name of the event</description>
        <label>Event Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>License_Link__c</fullName>
        <description>This opens up the License details in ORC application.</description>
        <formula>IF(NOT(ISBLANK(License_Number__c)),HYPERLINK("http://inside-apps.mathworks.com/licensing/masterLicense/list?q="&amp;License_Number__c,"Open License Details"),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This link opens up the License details in ORC application.</inlineHelpText>
        <label>License Link</label>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>License_Type__c</fullName>
        <description>used to further categorize a license type</description>
        <inlineHelpText>Select the type of license captured</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <description>Add Notes to benefits</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Partner_Agreement__c</fullName>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Partner Benefits</relationshipLabel>
        <relationshipName>Partner_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Re_sale_Markets__c</fullName>
        <label>Re-sale Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Unused_Benefit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Unused Benefit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>to enter the year of the event</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used to capture benefits for connections &amp; no-charge partners, related to a partner agreement.  These are also used to track discounted or no-charge licenses</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Partner Benefit</label><nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Partner Benefit</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Partner Benefits</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><recordTypes>
        <fullName>Event_Exhibitor</fullName>
        <active>true</active>
        <description>to capture events a Partner attends</description>
        <label>Event Exhibitor</label>
    </recordTypes><recordTypes>
        <fullName>License_Discount</fullName>
        <active>true</active>
        <label>License Discount</label>
    </recordTypes><recordTypes>
        <fullName>Logos</fullName>
        <active>true</active>
        <label>Logos</label>
    </recordTypes><recordTypes>
        <fullName>Newsletter</fullName>
        <active>true</active>
        <label>Newsletter</label>
    </recordTypes><recordTypes>
        <fullName>Press_Release</fullName>
        <active>true</active>
        <description>used for generic benefits</description>
        <label>Press Release</label>
    </recordTypes><recordTypes>
        <fullName>Re_sale_Discounts</fullName>
        <active>true</active>
        <label>Re-sale Discounts</label>
    </recordTypes><recordTypes>
        <fullName>Trade_Show_Sign</fullName>
        <active>true</active>
        <label>Trade Show Sign</label>
    </recordTypes><recordTypes>
        <fullName>Training_Discount</fullName>
        <active>true</active>
        <label>Training Discount</label>
    </recordTypes><recordTypes>
        <fullName>Trial</fullName>
        <active>true</active>
        <label>Trial</label>
    </recordTypes><recordTypes>
        <fullName>Trial_Form</fullName>
        <active>true</active>
        <label>Trial Form</label>
    </recordTypes><validationRules>
        <fullName>License_Number_must_be_numeric</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
LEN(License_Number__c) &lt;&gt;0, 
NOT (ISNUMBER(License_Number__c)) 
)</errorConditionFormula>
        <errorDisplayField>License_Number__c</errorDisplayField>
        <errorMessage>License Number can only contain numbers</errorMessage>
    </validationRules></CustomObject>